2005-04-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Internal/ProgressMonitoring/BaseProgressMonitor.cs: Don't crash
	when reporting an error with a null exception.

2005-04-10	John Luke	<john.luke@gmail.com>

	* Internal/Project/Project/AbstractProjectConfiguration.cs:
	set RunWithWarnings = true by default, because newer compiler
	versions may add warnings, etc.
	* options/MonoDevelopProperties.xml: remove a bunch of old SharpDevelop
	prefs and add some defaults for what we use

2005-04-09	Christian Hergert	<christian.hergert@gmail.com>

	* Services/DefaultLoggingService.cs: Fix the log4net error by
	checking for the .config before configuring.

2005-04-08	Christian Hergert	<christian.hergert@gmail.com>

	* Services/DefaultLoggingService.cs: Add missing event firing for Error
	method. Attempt to fix the constructor to be more like  log4net examples.

2005-04-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: Implemented
	IncludeFileToProject command.
	* Commands/ProjectBrowserCommands/GeneralNodeCommands.cs:
	New copy/cut/paste commands for tree nodes.
	* Services/File/DefaultFileService.cs:
	IFileService.cs: Use a progress monitor when opening files. OpenFile now
	return an IAsyncOperation object that can be used to track the status
	of the operation. Added methods for copying and moving files.
	* Services/DispatchService/DispatchService.cs: Dispatch all pending
	messages at once in the GUI thread. It gives better performance.
	* Services/Tasks/Task.cs: Track changes in IFileService.
	
	* Services/Project/IProjectService.cs:
	* Services/Project/ProjectService.cs: Implemented method for copying
	files between projects.
	
	* Gui/Pads/SolutionPad/TreeViewPad.cs: Implemented support for
	drag&drop and copy/paste. Some other internal improvements.
	* Gui/Pads/SolutionPad/ITreeNavigator.cs,
	* Gui/Pads/SolutionPad/TypeNodeBuilder.cs: Some API adjustments.